set max-height on articles

--- a/partials/post.hbs
+++ b/partials/post.hbs
@@ -1,4 +1,4 @@
-<article class="mdl-cell mdl-card angular-expo--shadow">
+<article class="mdl-cell mdl-card angular-expo--shadow" style="max-height: 400px;">
   <a class="mdl-card__media" href="{{ url }}">
     <div style="background-image:url({{image}})" title="{{title}}"></div>
   </a>
