changed email address in footer

--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -46,7 +46,7 @@
       </div>
       <ul class="mdl-mega-footer__link-list">
         <li><a href="{{@blog.url}}/about/">About</a></li>
-        <li><a href="mailto:&#112;&#106;&#103;&#046;&#108;&#097;&#114;&#111;&#115;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">Contact</a></li>
+        <li><a href="mailto:angularexpo@gmail.com">Contact</a></li>
         <li><a href="{{@blog.url}}/advertise/">Advertise</a></li>
         <li><a href="#" onclick="dialog.showModal();return false;">Newsletter</a></li>
         <li><a href="https://docs.google.com/forms/d/1I_FAai7Z5VFpZvOxFS68yZsCDsAngnOknIqzCwbBjE0" target="_blank" rel="nofollow">Submit link</a></li>
