changed footer links

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -533,6 +533,11 @@ img.article-image {
     background-color: #212121 !important;
 }
 
+
+.mdl-color--black {
+    background-color: #111111 !important;
+}
+
 @media screen and (max-width: 1024px) {
   .mdl-layout__header {
     display: flex;
