--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,10 +1,10 @@
 
-<footer class="mdl-mega-footer  mdl-color--grey-900">
+<footer class="mdl-mega-footer  mdl-color--black">
   <div class="mdl-mega-footer__middle-section">
     <div class="mdl-grid fixed-width">
       <div class="mdl-mega-footer__drop-down-section">
         <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
-        <h3 class="mdl-mega-footer__heading">About</h3>
+        <h3 class="mdl-mega-footer__heading"><b style="padding-left:1px;">About</b></h3>
         <p class="mdl-mega-footer__link-list mdl-mega-footer__text">
           Angular Expo is a beautiful showcase of websites, applications and experiments using the Angular JavaScript framework. Angular Expo has over 75+ AngularJS examples, including demos.
         </p>
@@ -12,32 +12,34 @@
 
       <div class="mdl-mega-footer__drop-down-section">
         <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
-        <h3 class="mdl-mega-footer__heading">Links</h3>
+        <h3 class="mdl-mega-footer__heading"><b>Links</b></h3>
         <ul class="mdl-mega-footer__link-list">
           <li><a target="_blank" href="https://angular.io/">Official Website</a></li>
           <li><a target="_blank" href="https://angular.io/docs/js/latest/">Official Documentation</a></li>
           <li><a target="_blank" href="https://www.creative-tim.com/bootstrap-themes/angular-dashboard/?affiliate_id=93321" rel="nofollow" onClick="ga('send', 'event', 'Outbound', 'Footer', 'https://www.creative-tim.com/bootstrap-themes/angular-dashboard/?affiliate_id=93321')">Angular Templates</a></li>
+          <li><a target="_blank" href="https://github.com/expojs/angularexpo">Github Angular Expo</a></li>
         </ul>
       </div>
+
       <div class="mdl-mega-footer__drop-down-section">
         <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
-        <h3 class="mdl-mega-footer__heading">Social</h3>
-        <ul class="mdl-mega-footer__link-list">
-          <li><a href="https://twitter.com/AngularExpo" target="_blank">Twitter</a></li>
-          <li><a href="https://www.linkedin.com/company/angular-expo/" target="_blank">LinkedIn</a></li>
-          <li><a href="https://www.facebook.com/AngularExpo" target="_blank">Facebook</a></li>
-          <li><a href="https://plus.google.com/b/111935773320409774129/111935773320409774129" target="_blank">Google+</a></li>
-        </ul>
-      </div>
-      <div class="mdl-mega-footer__drop-down-section">
-        <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
-        <h3 class="mdl-mega-footer__heading">More Information</h3>
+        <h3 class="mdl-mega-footer__heading"><b>More Information</b></h3>
         <ul class="mdl-mega-footer__link-list">
           <li><a href="{{@blog.url}}/about/">About Us</a></li>
           <li><a href="mailto:angularexpo@gmail.com">Contact</a></li>
           <li><a href="{{@blog.url}}/advertise/">Advertise</a></li>
           <li><a href="#" onclick="dialog.showModal();return false;">Newsletter</a></li>
           <li><a href="https://docs.google.com/forms/d/1I_FAai7Z5VFpZvOxFS68yZsCDsAngnOknIqzCwbBjE0" target="_blank" rel="nofollow">Submit link</a></li>
+          <li><a href="https://twitter.com/AngularExpo" target="_blank">Twitter</a></li>
+          <li><a href="https://www.facebook.com/AngularExpo" target="_blank">Facebook</a></li>
+        </ul>
+      </div>
+      <div class="mdl-mega-footer__drop-down-section">
+        <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
+        <h3 class="mdl-mega-footer__heading"><b>Special Thanks</b></h3>
+        <ul class="mdl-mega-footer__link-list">
+          <li><a href="https://iradesign.io/?ref=angularexpo">IRA Design</a></li>
+          <li><a href="https://www.creative-tim.com/templates/angular?ref=angularexpo">Creative Tim</a></li>
         </ul>
       </div>
     </div>
