--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -10,7 +10,7 @@
             <a class="mdl-navigation__link" href="https://www.facebook.com/AngularExpo" target="_blank"><i class="icon-facebook"></i></a>
             <a class="mdl-navigation__link" href="https://twitter.com/AngularExpo" target="_blank"><i class="icon-twitter"></i></a>
             <a class="mdl-navigation__link" href="https://www.linkedin.com/company/angular-expo/" target="_blank"><i class="icon-linkedin"></i></a>
-            <a class="mdl-navigation__link" href="https://plus.google.com/b/111935773320409774129/111935773320409774129" target="_blank"><i class="icon-gplus"></i></a>
+            <a class="mdl-navigation__link" href="https://github.com/expojs" target="_blank"><i class="icon-github-circled"></i></a>
             {{#if @labs.subscribers}}
               <a class="mdl-navigation__link mdl-layout--large-screen-only" href="{{@blog.url}}/subscribe/" target="_blank"><i class="icon-rss"></i></a>
             {{else}}
