--- a/assets/scss/_fontello.scss
+++ b/assets/scss/_fontello.scss
@@ -5,7 +5,7 @@
        url('/assets/font/fontello.woff2?86655366') format('woff2'),
        url('/assets/font/fontello.woff?86655366') format('woff'),
        url('/assets/font/fontello.ttf?86655366') format('truetype'),
-       url('/assets/font/fontello.svg?86655366#fontello') format('svg');
+       url('/assets/font/fontello.svg?86655366#fontello') format('svg'),;
   font-weight: normal;
   font-style: normal;
 }
@@ -64,3 +64,4 @@
 .icon-download-cloud:before { content: '\f0ed'; } /* '' */
 .icon-angle-left:before { content: '\f104'; } /* '' */
 .icon-angle-right:before { content: '\f105'; } /* '' */
+.icon-github-circled:before { content: '\f09b'; } /* '' */
