--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -40,6 +40,7 @@
         <ul class="mdl-mega-footer__link-list">
           <li><a href="https://iradesign.io/?ref=angularexpo">IRA Design</a></li>
           <li><a href="https://www.creative-tim.com/templates/angular?ref=angularexpo">Creative Tim</a></li>
+          <li><a href="https://www.creative-tim.com/templates/angular?ref=angularexpo">Creative Tim</a></li>
         </ul>
       </div>
     </div>
