--- a/error.hbs
+++ b/error.hbs
@@ -8,7 +8,7 @@
       <article class="mdl-cell mdl-cell--8-col">
         <h2>404</h2>
         <p>Page not found!</p>
-        <a href="{{@blog.url}}">Return to home &raquo;</a>
+        <a href="{{@site.url}}">Return to home &raquo;</a>
       </article>
     </div>
 
