--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -25,9 +25,9 @@
         <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
         <h3 class="mdl-mega-footer__heading"><b>More Information</b></h3>
         <ul class="mdl-mega-footer__link-list">
-          <li><a href="{{@blog.url}}/about/">About Us</a></li>
+          <li><a href="{{@site.url}}/about/">About Us</a></li>
           <li><a href="mailto:angularexpo@gmail.com">Contact</a></li>
-          <li><a href="{{@blog.url}}/advertise/">Advertise</a></li>
+          <li><a href="{{@site.url}}/advertise/">Advertise</a></li>
           <li><a href="#" onclick="dialog.showModal();return false;">Newsletter</a></li>
           <li><a href="https://docs.google.com/forms/d/1I_FAai7Z5VFpZvOxFS68yZsCDsAngnOknIqzCwbBjE0" target="_blank" rel="nofollow">Submit link</a></li>
           <li><a href="https://twitter.com/AngularExpo" target="_blank">Twitter</a></li>
