--- a/partials/post.hbs
+++ b/partials/post.hbs
@@ -1,6 +1,6 @@
 <article class="mdl-cell mdl-card angular-expo--shadow" style="max-height: 400px;">
   <a class="mdl-card__media" href="{{ url }}">
-    <div style="background-image:url({{image}})" title="{{title}}"></div>
+    <div style="background-image:url({{feature_image}})" title="{{title}}"></div>
   </a>
   <div class="mdl-card__title">
       <h2 class="mdl-card__title-text"><a href="{{ url }}">{{title}}</a></h2>
