--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -16,7 +16,7 @@
         <ul class="mdl-mega-footer__link-list">
           <li><a target="_blank" href="https://angular.io/">Official Website</a></li>
           <li><a target="_blank" href="https://angular.io/docs/js/latest/">Official Documentation</a></li>
-          <li><a target="_blank" href="https://www.creative-tim.com/bootstrap-themes/angular-dashboard/?affiliate_id=93321" rel="nofollow" onClick="ga('send', 'event', 'Outbound', 'Footer', 'https://www.creative-tim.com/bootstrap-themes/angular-dashboard/?affiliate_id=93321')">Angular Templates</a></li>
+          <li><a target="_blank" href="https://www.creative-tim.com/bootstrap-themes/angular-dashboard/?partner=93321"  onClick="ga('send', 'event', 'Outbound', 'Footer', 'https://www.creative-tim.com/bootstrap-themes/angular-dashboard/?partner=93321')">Angular Templates</a></li>
           <li><a target="_blank" href="https://github.com/expojs/angularexpo">Github Angular Expo</a></li>
         </ul>
       </div>
@@ -29,7 +29,7 @@
           <li><a href="mailto:angularexpo@gmail.com">Contact</a></li>
           <li><a href="{{@site.url}}/advertise/">Advertise</a></li>
           <li><a href="#" onclick="dialog.showModal();return false;">Newsletter</a></li>
-          <li><a href="https://docs.google.com/forms/d/1I_FAai7Z5VFpZvOxFS68yZsCDsAngnOknIqzCwbBjE0" target="_blank" rel="nofollow">Submit link</a></li>
+          <li><a href="https://docs.google.com/forms/d/1I_FAai7Z5VFpZvOxFS68yZsCDsAngnOknIqzCwbBjE0" target="_blank">Submit link</a></li>
           <li><a href="https://twitter.com/AngularExpo" target="_blank">Twitter</a></li>
           <li><a href="https://www.facebook.com/AngularExpo" target="_blank">Facebook</a></li>
         </ul>
