--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -6,7 +6,7 @@
         <div class="">
           <nav class="mdl-navigation">
             <a class="mdl-navigation__link mdl-layout--large-screen-only" href="https://www.creative-tim.com/bootstrap-themes/free?ref=angularexpo" target="_blank">Bootstrap Themes</a>
-            <a class="mdl-navigation__link mdl-layout--large-screen-only" href="https://www.creative-tim.com/bootstrap-themes/angular-dashboard/?affiliate_id=93321" target="_blank" onClick="ga('send', 'event', 'Outbound', 'Top', 'https://www.creative-tim.com/bootstrap-themes/angular-dashboard/?affiliate_id=93321')">Angular Themes</a>
+            <a class="mdl-navigation__link mdl-layout--large-screen-only" href="https://www.creative-tim.com/bootstrap-themes/angular-dashboard/?partner=93321" target="_blank" onClick="ga('send', 'event', 'Outbound', 'Top', 'https://www.creative-tim.com/bootstrap-themes/angular-dashboard/?partner=93321')">Angular Themes</a>
             <a class="mdl-navigation__link" href="https://www.facebook.com/AngularExpo" target="_blank"><i class="icon-facebook"></i></a>
             <a class="mdl-navigation__link" href="https://twitter.com/AngularExpo" target="_blank"><i class="icon-twitter"></i></a>
             <a class="mdl-navigation__link" href="https://www.linkedin.com/company/angular-expo/" target="_blank"><i class="icon-linkedin"></i></a>
