--- a/partials/post-creativetim0.hbs
+++ b/partials/post-creativetim0.hbs
@@ -1,33 +1,33 @@
 <article id="theme-3" class="mdl-cell mdl-card angular-expo--shadow" style="display:none;">
-  <a class="mdl-card__media" target="_blank" href="https://www.creative-tim.com/product/material-dashboard-pro-angular2/?affiliate_id=93321" rel="nofollow" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/material-dashboard-pro-angular2/?affiliate_id=93321')">
+  <a class="mdl-card__media" target="_blank" href="https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321"  onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321')">
     <div style="background-image:url({{asset "img/material-dashboard-pro-angular.jpg"}})"></div>
   </a>
   <div class="mdl-card__title">
     <h2 class="mdl-card__title-text">
-      <a target="_blank" href="https://www.creative-tim.com/product/material-dashboard-pro-angular2/?affiliate_id=93321" rel="nofollow" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/material-dashboard-pro-angular2/?affiliate_id=93321')">Material Dashboard Pro</a>
+      <a target="_blank" href="https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321"  onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321')">Material Dashboard Pro</a>
     </h2>
   </div>
   <div class="mdl-card__supporting-text">
     <p>Material Dashboard Pro for Angular. Forget about boring dashboards and grab yourself a copy!</p>
   </div>
   <div class="mdl-card__actions">
-    <a target="_blank" href="https://www.creative-tim.com/product/material-dashboard-pro-angular2/?affiliate_id=93321" rel="nofollow" class="mdl-button" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/material-dashboard-pro-angular2/?affiliate_id=93321')">Read more</a>
+    <a target="_blank" href="https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321"  class="mdl-button" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321')">Read more</a>
     <span class="mdl-featured">Featured</span>
   </div>
 </article>
 
 <article id="theme-4" class="mdl-cell mdl-card angular-expo--shadow" style="display:none;">
-  <a class="mdl-card__media" target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?affiliate_id=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?affiliate_id=93321')">
+  <a class="mdl-card__media" target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')">
     <div style="background-image:url({{asset "img/light-bootstrap-dashboard-angular.jpg"}})"></div>
   </a>
   <div class="mdl-card__title">
-    <h2 class="mdl-card__title-text"><a target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?affiliate_id=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?affiliate_id=93321')">Light Bootstrap Dashboard Pro</a></h2>
+    <h2 class="mdl-card__title-text"><a target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')">Light Bootstrap Dashboard Pro</a></h2>
   </div>
   <div class="mdl-card__supporting-text">
     <p>Light Dashboard Pro for Angular. Forget about boring dashboards and grab yourself a copy!</p>
   </div>
   <div class="mdl-card__actions">
-    <a target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?affiliate_id=93321" rel="noopener" class="mdl-button" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?affiliate_id=93321')">Read more</a>
+    <a target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321" rel="noopener" class="mdl-button" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')">Read more</a>
     <span class="mdl-featured">Featured</span>
   </div>
 </article>
