--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,4 +1,4 @@
-
+<!--
 <footer class="mdl-mega-footer  mdl-color--black">
   <div class="mdl-mega-footer__middle-section">
     <div class="mdl-grid fixed-width">
@@ -45,4 +45,44 @@
     </div>
   </div>
 
+</footer> -->
+<footer class="footer" style="background-color: black; color: #fff">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3">
+        <h3 class="text-white"><b style="padding-left:1px;">About</b></h3>
+        <p class="text-white-50">
+          Angular Expo is a beautiful showcase of websites, applications and experiments using the Angular JavaScript framework. Angular Expo has over 75+ AngularJS examples, including demos.
+        </p>
+      </div>
+      <div class="col-md-3">
+        <h3 class="text-white"><b>Links</b></h3>
+        <ul class="nav flex-column list-unstyled">
+          <li class="nav-item"><a class="text-white-50" target="_blank" href="https://angular.io/">Official Website</a></li>
+          <li class="nav-item"><a class="text-white-50" target="_blank" href="https://angular.io/docs/js/latest/">Official Documentation</a></li>
+          <li class="nav-item"><a class="text-white-50" target="_blank" href="https://www.creative-tim.com/bootstrap-themes/angular-dashboard/?partner=93321"  onClick="ga('send', 'event', 'Outbound', 'Footer', 'https://www.creative-tim.com/bootstrap-themes/angular-dashboard/?partner=93321')">Angular Templates</a></li>
+          <li class="nav-item"><a class="text-white-50" target="_blank" href="https://github.com/expojs/angularexpo">Github Angular Expo</a></li>
+        </ul>
+      </div>
+      <div class="col-md-3">
+        <h3 class="text-white"><b>More Information</b></h3>
+        <ul class="nav flex-column list-unstyled">
+          <li class="nav-item"><a class="text-white-50" href="{{@site.url}}/about/">About Us</a></li>
+          <li class="nav-item"><a class="text-white-50" href="mailto:angularexpo@gmail.com">Contact</a></li>
+          <li class="nav-item"><a class="text-white-50" href="{{@site.url}}/advertise/">Advertise</a></li>
+          <li class="nav-item"><a class="text-white-50" href="#" onclick="dialog.showModal();return false;">Newsletter</a></li>
+          <li class="nav-item"><a class="text-white-50" href="https://docs.google.com/forms/d/1I_FAai7Z5VFpZvOxFS68yZsCDsAngnOknIqzCwbBjE0" target="_blank">Submit link</a></li>
+          <li class="nav-item"><a class="text-white-50" href="https://twitter.com/AngularExpo" target="_blank">Twitter</a></li>
+          <li class="nav-item"><a class="text-white-50" href="https://www.facebook.com/AngularExpo" target="_blank">Facebook</a></li>
+        </ul>
+      </div>
+      <div class="col-md-3">
+        <h3 class="text-white"><b>Special Thanks</b></h3>
+        <ul class="nav flex-column list-unstyled">
+          <li class="nav-item"><a class="text-white-50" href="https://iradesign.io/?ref=angularexpo">IRA Design</a></li>
+          <li class="nav-item"><a class="text-white-50" href="https://www.creative-tim.com/templates/angular?ref=angularexpo">Creative Tim</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </footer>
