changed loop classes

--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -1,14 +1,14 @@
 {{pagination}}
 
-{{#tag}}
+<!-- {{#tag}}
 <div class="mdl-grid fixed-width">
   <div class="mdl-cell mdl-cell--12-col">
     <h1 class="mdl-typography--display-1">{{name}}{{#if description}} <small>{{description}}</small>{{/if}}</h1>
   </div>
 </div>
-{{/tag}}
+{{/tag}} -->
 
-<div class="mdl-grid fixed-width">
+<div class="d-flex flex-wrap">
 
   {{> post-creativetim }}
 
